force-app/main/default/objects/QCC_First_Host__c/QCC_First_Host__c.object-meta.xml
<CustomObject>
    <description>Container for creating records for the First Host process</description>
    <label>Qantas Host</label>
    <nameField>
        <displayFormat>FH{00000000}</displayFormat>
        <label>First Host Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qantas Hosts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>