force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>QCC_Additional_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>