force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Arrival_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>QCC_Arrival_Airport_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Value comes from Pre-Departure platform event. This is referenced by the Email Alert for first host is sent.</description>
    <label>Arrival Airport Code</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Qantas Hosts</relationshipLabel>
    <relationshipName>Qantas_Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>