force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Arrival_Local_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Arrival_Local_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Local Date</label>
    <type>Date</type>
</CustomField>