force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Arrival_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>QCC_Arrival_Local_Time__c</fullName>
    <label>Arrival Local Time</label>
    <type>Time</type>
</CustomField>