force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Cabin__c.field-meta.xml
<CustomField>
    <fullName>QCC_Cabin__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is extracted as part of the Qantas Host report.</description>
    <label>Cabin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>First</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Business</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Premium Economy</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Economy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>