force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Car_Make_and_Model__c.field-meta.xml
<CustomField>
    <fullName>QCC_Car_Make_and_Model__c</fullName>
    <description>Populated by Agent based on the customer&apos;s reply on the Qantas Host email</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specify value based on the customer&apos;s reply on the Qantas Host email</inlineHelpText>
    <label>Car Make and Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>