force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>QCC_Carrier_Code__c</fullName>
    <defaultValue>&quot;QF&quot;</defaultValue>
    <description>Value comes from Pre-Departure platform event. This is referenced by the Email Alert for first host is sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>