force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>QCC_Class_of_Service__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is extracted as part of the Qantas Host report.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking Class</label>
    <length>1</length>
    <type>Text</type>
</CustomField>