force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Contact_Lastname__c.field-meta.xml
<CustomField>
    <fullName>QCC_Contact_Lastname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>