force-app/main/default/objects/QCC_First_Host__c/fields/QCC_CONX_Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>QCC_CONX_Arrival_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connecting Arrival Port</description>
    <label>Arrival Airport</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Qantas Hosts (Arrival Port)</relationshipLabel>
    <relationshipName>Qantas_Hosts2</relationshipName>
    <type>Lookup</type>
</CustomField>