force-app/main/default/objects/QCC_First_Host__c/fields/QCC_CONX_Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>QCC_CONX_Departure_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connecting Departure Airport</description>
    <label>Departure Airport</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Qantas Hosts (Departure Airport)</relationshipLabel>
    <relationshipName>Qantas_Hosts3</relationshipName>
    <type>Lookup</type>
</CustomField>