force-app/main/default/objects/QCC_First_Host__c/fields/QCC_CONX_Departure_Airport_Name__c.field-meta.xml
<CustomField>
    <fullName>QCC_CONX_Departure_Airport_Name__c</fullName>
    <formula>QCC_CONX_Departure_Airport__r.Freight_Station_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Airport</label>
    <type>Text</type>
</CustomField>