force-app/main/default/objects/QCC_First_Host__c/fields/QCC_CONX_Departure_Local_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_CONX_Departure_Local_Date__c</fullName>
    <description>Connecting flight departure local date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Local Date</label>
    <length>12</length>
    <type>Text</type>
</CustomField>