force-app/main/default/objects/QCC_First_Host__c/fields/QCC_CONX_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>QCC_CONX_Flight_No__c</fullName>
    <description>Connecting flight, flight number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight No</label>
    <length>4</length>
    <type>Text</type>
</CustomField>