force-app/main/default/objects/QCC_First_Host__c/fields/QCC_CONX_PNR__c.field-meta.xml
<CustomField>
    <fullName>QCC_CONX_PNR__c</fullName>
    <description>Connecting flight passenger PNR</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Connecting flight passenger PNR</inlineHelpText>
    <label>PNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>