force-app/main/default/objects/QCC_First_Host__c/fields/QCC_CONX_Scheduled_Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>QCC_CONX_Scheduled_Departure_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Departure Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>