force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Curbside_Meet_Greet__c.field-meta.xml
<CustomField>
    <fullName>QCC_Curbside_Meet_Greet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by Agent based on the customer&apos;s reply on the Qantas Host email</description>
    <inlineHelpText>Specify value based on the customer&apos;s reply on the Qantas Host email</inlineHelpText>
    <label>Curbside Meet &amp; Greet</label>
    <type>Checkbox</type>
</CustomField>