force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Departure_Airport__c.field-meta.xml
<CustomField>
    <fullName>QCC_Departure_Airport__c</fullName>
    <formula>QCC_Departure_Airport_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Airport</label>
    <type>Text</type>
</CustomField>