force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Departure_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>QCC_Departure_Airport_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Qantas Hosts (Departure Airport)</relationshipLabel>
    <relationshipName>Qantas_Hosts1</relationshipName>
    <type>Lookup</type>
</CustomField>