force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Effective_Tier__c.field-meta.xml
<CustomField>
    <fullName>QCC_Effective_Tier__c</fullName>
    <label>Effective Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FFLP</fullName>
                <label>Lifetime Platinum</label>
            </value>
            <value>
                <fullName>CLLP</fullName>
                <label>Chairman&apos;s Lounge Platinum One</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>