force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Expected_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>QCC_Expected_Arrival_Time__c</fullName>
    <description>Populated by Agent based on the customer&apos;s reply on the Qantas Host email</description>
    <inlineHelpText>Specify value based on the customer&apos;s reply on the Qantas Host email</inlineHelpText>
    <label>Expected Arrival Time</label>
    <type>Time</type>
</CustomField>