force-app/main/default/objects/QCC_First_Host__c/fields/QCC_First_Host_Contact__c.field-meta.xml
<CustomField>
    <fullName>QCC_First_Host_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically populated when watchlist record is created under the contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>First_Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>