force-app/main/default/objects/QCC_First_Host__c/fields/QCC_First_Host_First_Name__c.field-meta.xml
<CustomField>
    <fullName>QCC_First_Host_First_Name__c</fullName>
    <description>Set to First Name of the Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>