force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Flight_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>QCC_Flight_Departure_Time__c</fullName>
    <description>Value comes from Pre-Departure platform event.</description>
    <label>Flight Departure Time</label>
    <type>Time</type>
</CustomField>