force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>QCC_Flight_No__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is referenced by the Email Alert for first host is sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight No</label>
    <length>4</length>
    <type>Text</type>
</CustomField>