force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Frequent_Flyer_Tier_Formula__c.field-meta.xml
<CustomField>
    <fullName>QCC_Frequent_Flyer_Tier_Formula__c</fullName>
    <formula>SUBSTITUTE(TEXT(QCC_First_Host_Contact__r.Frequent_Flyer_Tier__c),&quot;&apos;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequent Flyer Tier</label>
    <type>Text</type>
</CustomField>