force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Number_of_Bags__c.field-meta.xml
<CustomField>
    <fullName>QCC_Number_of_Bags__c</fullName>
    <description>Updated automatically when the Qantas Host online form is submitted by the customer. Can also be set manually by agent either when a customer calls or reply via email.</description>
    <inlineHelpText>The number of bags specified by the customer</inlineHelpText>
    <label>Number of Bags</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>