force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Online_Form_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Online_Form_Submission_Date__c</fullName>
    <description>The date when the online form has been submitted.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date when the online form has been submitted.</inlineHelpText>
    <label>Online Form Submission Date</label>
    <type>DateTime</type>
</CustomField>