force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>QCC_Other_Details__c</fullName>
    <description>Updated automatically when the Qantas Host online form is submitted by the customer. Can also be set manually by agent either when a customer calls or reply via email.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specify value based on the customer&apos;s reply on the Qantas Host email or call or automatically from the online form submission</inlineHelpText>
    <label>Other Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>