force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Other_Services__c.field-meta.xml
<CustomField>
    <fullName>QCC_Other_Services__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is referenced by the Email Alert for first host is sent.</description>
    <label>Other Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WCHR</fullName>
            </value>
            <value>
                <fullName>BSCT</fullName>
            </value>
            <value>
                <fullName>WCHS</fullName>
            </value>
            <value>
                <fullName>WCHC</fullName>
            </value>
            <value>
                <fullName>OTHS</fullName>
            </value>
            <value>
                <fullName>QCID</fullName>
            </value>
            <value>
                <fullName>GRPF</fullName>
            </value>
            <value>
                <fullName>QSME</fullName>
            </value>
            <value>
                <fullName>CHLD</fullName>
            </value>
            <value>
                <fullName>CKIN</fullName>
            </value>
            <value>
                <fullName>PCKI</fullName>
            </value>
            <value>
                <fullName>LKRL</fullName>
            </value>
            <value>
                <fullName>PARK</fullName>
            </value>
            <value>
                <fullName>CHTR</fullName>
            </value>
            <value>
                <fullName>INFT</fullName>
            </value>
            <value>
                <fullName>STFF</fullName>
            </value>
            <value>
                <fullName>GRPS</fullName>
            </value>
            <value>
                <fullName>QGSO</fullName>
            </value>
            <value>
                <fullName>PENF</fullName>
            </value>
            <value>
                <fullName>AGTN</fullName>
            </value>
            <value>
                <fullName>NCRO</fullName>
            </value>
            <value>
                <fullName>RLOC</fullName>
            </value>
            <value>
                <fullName>MEDA</fullName>
            </value>
            <value>
                <fullName>CFDD</fullName>
            </value>
            <value>
                <fullName>CFDA</fullName>
            </value>
            <value>
                <fullName>LPAC</fullName>
            </value>
            <value>
                <fullName>TCP</fullName>
            </value>
            <value>
                <fullName>CCRD</fullName>
            </value>
            <value>
                <fullName>NCKI</fullName>
            </value>
            <value>
                <fullName>SFOF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>