force-app/main/default/objects/QCC_First_Host__c/fields/QCC_PNR__c.field-meta.xml
<CustomField>
    <fullName>QCC_PNR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>