force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Preferred_Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>QCC_Preferred_Contact_Channel__c</fullName>
    <formula>TEXT(QCC_First_Host_Contact__r.QCC_Preferred_Contact_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred VIP Service Channel</label>
    <type>Text</type>
</CustomField>