force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Qantas_First_Spa_Lounge__c.field-meta.xml
<CustomField>
    <fullName>QCC_Qantas_First_Spa_Lounge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated automatically when the Qantas Host online form is submitted by the customer. Can also be set manually by agent either when a customer calls or reply via email.</description>
    <inlineHelpText>Checked for customers requesting spa service</inlineHelpText>
    <label>Qantas First Spa Lounge</label>
    <type>Checkbox</type>
</CustomField>