force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Spa_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>QCC_Spa_Booking_Status__c</fullName>
    <label>Spa Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Waitlist</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Out of Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>