force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Spa_Booking_Time__c.field-meta.xml
<CustomField>
    <fullName>QCC_Spa_Booking_Time__c</fullName>
    <label>Spa Booking Time</label>
    <type>Time</type>
</CustomField>