force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Spa_Request_Outcome__c.field-meta.xml
<CustomField>
    <fullName>QCC_Spa_Request_Outcome__c</fullName>
    <label>Spa Request Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed to Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>