force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Special_Meal__c.field-meta.xml
<CustomField>
    <fullName>QCC_Special_Meal__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is referenced by the Email Alert for first host is sent.</description>
    <label>Special Meal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHML</fullName>
                <label>a child meal</label>
            </value>
            <value>
                <fullName>SOQE</fullName>
                <label>a Select on Q meal</label>
            </value>
            <value>
                <fullName>GFML</fullName>
                <label>a gluten intolerant meal</label>
            </value>
            <value>
                <fullName>VGML</fullName>
                <label>a vegetarian vegan meal</label>
            </value>
            <value>
                <fullName>VLML</fullName>
                <label>a vegetarian lacto-ovo meal</label>
            </value>
            <value>
                <fullName>AVML</fullName>
                <label>a vegetarian hindu meal</label>
            </value>
            <value>
                <fullName>MOML</fullName>
                <label>a moslem meal</label>
            </value>
            <value>
                <fullName>HNML</fullName>
                <label>a hindu meal</label>
            </value>
            <value>
                <fullName>VOML</fullName>
                <label>a vegetarian oriental meal</label>
            </value>
            <value>
                <fullName>FPML</fullName>
                <label>a fruit platter meal</label>
            </value>
            <value>
                <fullName>DBML</fullName>
                <label>a diabetic meal</label>
            </value>
            <value>
                <fullName>VJML</fullName>
                <label>a vegetarian jain meal</label>
            </value>
            <value>
                <fullName>BBML</fullName>
                <label>a baby meal</label>
            </value>
            <value>
                <fullName>KSML</fullName>
                <label>a kosher meal</label>
            </value>
            <value>
                <fullName>SPML</fullName>
                <label>a special meal</label>
            </value>
            <value>
                <fullName>BLML</fullName>
                <label>a bland meal</label>
            </value>
            <value>
                <fullName>NLML</fullName>
                <label>a low lactose meal</label>
            </value>
            <value>
                <fullName>LFML</fullName>
                <label>a low fat meal</label>
            </value>
            <value>
                <fullName>RVML</fullName>
                <label>a vegetarian raw meal</label>
            </value>
            <value>
                <fullName>LSML</fullName>
                <label>a low salt meal</label>
            </value>
            <value>
                <fullName>LCML</fullName>
                <label>a low calorie meal</label>
            </value>
            <value>
                <fullName>SFML</fullName>
                <label>a seafood meal</label>
            </value>
            <value>
                <fullName>ORML</fullName>
                <label>an oriental meal</label>
            </value>
            <value>
                <fullName>SALD</fullName>
                <label>a salad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>