force-app/main/default/objects/QCC_First_Host__c/fields/QCC_TECH_Comms_Sending_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_Comms_Sending_Date__c</fullName>
    <description>This is the sending date of the communication matrix upon creation of the record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the sending date of the communication matrix upon creation of the record.</inlineHelpText>
    <label>QCC TECH Comms Sending Date</label>
    <type>DateTime</type>
</CustomField>