force-app/main/default/objects/QCC_First_Host__c/fields/QCC_TECH_CONX_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_CONX_Parent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Parent Qantas Host record for a record which is a connecting flight.</description>
    <inlineHelpText>This is the Parent Qantas Host record for a record which is a connecting flight.</inlineHelpText>
    <label>QCC TECH CONX Parent Id</label>
    <referenceTo>QCC_First_Host__c</referenceTo>
    <relationshipLabel>Qantas Hosts</relationshipLabel>
    <relationshipName>Qantas_Hosts</relationshipName>
    <type>Lookup</type>
</CustomField>