force-app/main/default/objects/QCC_First_Host__c/fields/QCC_TECH_Day_Prior_Contact_Form__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_Day_Prior_Contact_Form__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TECH Day Prior Contact Form</label>
    <type>TextArea</type>
</CustomField>