force-app/main/default/objects/QCC_First_Host__c/fields/QCC_TECH_Expected_Arrival_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_Expected_Arrival_Time_Formula__c</fullName>
    <formula>IF(
	HOUR(QCC_Expected_Arrival_Time__c) &lt;= 12,
	LPAD(TEXT(HOUR(QCC_Expected_Arrival_Time__c)), 2, &apos;0&apos;),
	LPAD(TEXT(HOUR(QCC_Expected_Arrival_Time__c) - 12), 2, &apos;0&apos;)
) &amp;
&quot;:&quot; &amp;
LPAD(TEXT(MINUTE(QCC_Expected_Arrival_Time__c)), 2, &apos;0&apos;) &amp;
IF (
	HOUR(QCC_Expected_Arrival_Time__c) &lt; 12,
	&quot; AM&quot;,
	&quot; PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QCC TECH Expected Arrival Time Formula</label>
    <type>Text</type>
</CustomField>