force-app/main/default/objects/QCC_First_Host__c/fields/QCC_TECH_GetConnectingFlights__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_GetConnectingFlights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GetConnectingFlights</label>
    <type>Checkbox</type>
</CustomField>