force-app/main/default/objects/QCC_First_Host__c/fields/QCC_TECH_IsCreatedFromEvent__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_IsCreatedFromEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is maintained to know if the record has been created via Pre Departure payload.</description>
    <inlineHelpText>This flag is maintained to know if the record has been created via Pre Departure payload.</inlineHelpText>
    <label>Is Created from Event?</label>
    <type>Checkbox</type>
</CustomField>