force-app/main/default/objects/QCC_First_Host__c/fields/QCC_TECH_SMS_Need_To_Send__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_SMS_Need_To_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the SMS is needed to be send to the customer.</description>
    <inlineHelpText>This field is used to determine if the SMS is needed to be send to the customer.</inlineHelpText>
    <label>SMS Need to Send?</label>
    <type>Checkbox</type>
</CustomField>