force-app/main/default/objects/QCC_First_Host__c/fields/QCC_Tier_Effective_Tier_Formula__c.field-meta.xml
<CustomField>
    <fullName>QCC_Tier_Effective_Tier_Formula__c</fullName>
    <formula>TEXT( QCC_First_Host_Contact__r.QCC_Effective_Tier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QCC Tier Effective Tier Formula</label>
    <type>Text</type>
</CustomField>