force-app/main/default/objects/QCC_First_Host__c/validationRules/Flight_Number_accept_4_digits_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Flight_Number_accept_4_digits_only</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
NOT(ISNUMBER( QCC_Flight_No__c )),
LEN( QCC_Flight_No__c ) &lt;&gt; 4
)</errorConditionFormula>
    <errorMessage>Flight Number must contain 4 digits</errorMessage>
</ValidationRule>