force-app/main/default/objects/QCC_First_Host__c/validationRules/QCC_Spa_Request_Outcome_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>QCC_Spa_Request_Outcome_Not_Null</fullName>
    <active>true</active>
    <description>Spa Request Outcome should not be changed to null.</description>
    <errorConditionFormula>AND(
	ISCHANGED(QCC_Spa_Request_Outcome__c),
	ISBLANK(TEXT(QCC_Spa_Request_Outcome__c))
	)</errorConditionFormula>
    <errorMessage>Spa Request Outcome cannot be null.</errorMessage>
</ValidationRule>