force-app/main/default/objects/QCC_First_Host__c/validationRules/QCC_Validate_Spa_Request_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>QCC_Validate_Spa_Request_Outcome</fullName>
    <active>true</active>
    <description>This will not allow the confirm spa quick action to change from Sent/Failed to Send TO Sending Status.</description>
    <errorConditionFormula>AND(
	ISCHANGED( QCC_Spa_Request_Outcome__c ),
	OR(
		AND(
			ISPICKVAL(PRIORVALUE(QCC_Spa_Request_Outcome__c), &apos;Pending&apos;),
			NOT(ISPICKVAL(QCC_Spa_Request_Outcome__c , &apos;Sending&apos;))
		),
		AND(
			ISPICKVAL(PRIORVALUE(QCC_Spa_Request_Outcome__c), &apos;Failed to Send&apos;),
			ISPICKVAL(QCC_Spa_Request_Outcome__c , &apos;Sent&apos;)
		),
		AND(
			ISPICKVAL(PRIORVALUE(QCC_Spa_Request_Outcome__c), &apos;Sent&apos;),
			ISPICKVAL(QCC_Spa_Request_Outcome__c , &apos;Failed to Send&apos;)
		)
	)
)</errorConditionFormula>
    <errorMessage>Changing to this Spa Request Outcome is not allowed. Please set to Pending first.</errorMessage>
</ValidationRule>